===================================
Smartline Lite Changelog
===================================

Version 1.3.1
-----------------------------------
[added] basic support for wooCommerce
[added] support for ThemeZee Breadcrumbs plugin
[added] email icon to social menu
[added] custom header image settings

Version 1.3.0
-----------------------------------
[removed] empty spaces at the end of template files
[fixed] styling of 404 template
[changed] CSS styling of navigation for custom navi hover color setting

Version 1.2.9
-----------------------------------
[changed] all h2 post and page titles to h1 for better SEO
[fixed] postmeta styling for widget bundle

Version 1.2.8
-----------------------------------
[added] escaping for translation strings for improved security

Version 1.2.7
-----------------------------------
[added] postmeta setting to Category Posts Boxed widget
[added] postmeta setting to Category Posts Columns widget
[added] postmeta setting to Category Posts Grid widget
[added] postmeta setting to Category Posts Horizontal widget

Version 1.2.6
-----------------------------------
[moved] additional functions from functions.php to extras.php and template-tags.php
[added] theme support for Widget Bundle Addon Plugin
[removed] fallback solution for new title tag feature of WordPress
[removed] function_exists wrappers for action hook functions
[changed] implementation of threaded comments javascript

Version 1.2.5
-----------------------------------
[moved] register_widget functions to widgets_init action hook to fix widget translation
[improved] customizer sections to be translation-ready
[updated] German translation file

Version 1.2.4
-----------------------------------
[improved] code of 404.php and search.php templates
[improved] phrasing of all translatable text strings
[updated] translation files

Version 1.2.3
-----------------------------------
[fixed] deprecating PHP4 style constructors notices in WordPress 4.3

Version 1.2.2