@@ -8,6 +8,7 @@ Version 1.3.1
 [added] support for ThemeZee Breadcrumbs plugin
 [added] email icon to social menu
 [added] custom header image settings
+[added] theme links in theme options panel
 
 Version 1.3.0
 -----------------------------------
